<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/register_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textColor="@color/Black"/>
        <EditText
            android:id="@+id/txtRstFirstName"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="first name"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/txtRstLastName"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="Last name"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/txtRstUsrName"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="User name"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/txtRstPwd"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:hint="Password"
            android:singleLine="true"/>

        <TextView
            android:text="@string/gender_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/Black"/>
        <RadioGroup
            android:id="@+id/rdgGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rdMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"/>
            <RadioButton
                android:id="@+id/rdFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="Female"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">
            <TextView
                android:text="@string/register_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"/>
            <Spinner
                android:id="@+id/spnCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/country_arrays"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
        <CheckBox
            android:id="@+id/chkAgree"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"/>
        <Button
            android:id="@+id/btnRstSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="Submit"
            android:onClick="SaveData"/>
    </LinearLayout>
</ScrollView>